5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4006/executions/1635_2704.log
== TEST (2019-04-08 14:40:33) 
-- CODE:
x = float(input("nota")

			 
			
-- ERROR:
File "XXXX", line 5
    
       ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 14:44:18) 
-- CODE:
x = float(input("nota"))
if (x >= 6):
	b = 10/100 + x
	mensagem = "s"
else :
	mensagem = "n"
print(mensagem)
			 
			 
			
-- OUTPUT:
n
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-08 14:44:36) 
-- CODE:
x = float(input("nota"))
if (x >= 6):
	b = 10/100 + x
	mensagem = "s"
else :
	mensagem = "n"
print(mensagem)
			 
			 
			
-- EXECUTION TIME:
0.177267
-- TEST CASE 1:
---- input:
5.0
S
---- correct output:
5.5
---- user output:
n
-- TEST CASE 2:
---- input:
9.0
S
---- correct output:
9.9
---- user output:
s
-- TEST CASE 3:
---- input:
4.4
N
---- correct output:
4.4
---- user output:
n
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 14:45:29) 
-- CODE:
x = float(input("nota"))
if (x >= 6):
	b = 10/100 
	c = b + x
	mensagem = "s"
else :
	mensagem = "n"
print(mensagem)
			 
			 
			
-- OUTPUT:
n
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 14:48:01) 
-- CODE:
x = float(input("nota"))
if (x >= 6):
	b = 10/100 * x
	c = b + x
	mensagem = "S"
else :
	mensagem = "N"
print
			 
			 
			
-- OUTPUT:
n
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 14:48:29) 
-- CODE:
x = float(input("nota"))
if (x >= 6):
	b = 10/100 * x
	c = b + x
	mensagem = "S"
else :
	mensagem = "N"
print(c)
			 
			 
			
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(c)
NameError: name 'c' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-08 14:48:49) 
-- CODE:
x = float(input("nota"))
if (x >= 6):
	b = 10/100 * x
	c = b + x
	mensagem = "S"
else :
	mensagem = "N"
print(c)
			 
			 
			
-- EXECUTION TIME:
0.13953
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1635/2704/main.py", line 8, in <module>
    print(c)
NameError: name 'c' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 14:48:57) 
-- CODE:
x = float(input("nota"))
if (x >= 6):
	b = 10/100 * x
	c = b + x
	mensagem = "S"
else :
	mensagem = "N"
print(c)
			 
			 
			
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(c)
NameError: name 'c' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-08 14:49:29) 
-- CODE:
x = float(input("nota"))
if (x >= 6):
	b = 10/100 * x
	c = b + x
	mensagem = "S"
else :
	mensagem = "N"
print(c)
			 
			 
			
-- EXECUTION TIME:
0.130825
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1635/2704/main.py", line 8, in <module>
    print(c)
NameError: name 'c' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 14:55:51) 
-- CODE:
x = float(input("nota"))
y = input("mensagem")
if (x >= 6):
	b = 10/100 * x
	c = b + x
	
else :
	
print(c)
			 
			 
			
-- ERROR:
File "XXXX", line 9
    print(c)
        ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 14:55:56) 
-- CODE:
x = float(input("nota"))
y = input("mensagem")
if (x >= 6):
	b = 10/100 * x
	c = b + x
	
else :
	
print(c)
			 
			 
			
-- ERROR:
File "XXXX", line 9
    print(c)
        ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 14:56:01) 
-- CODE:
x = float(input("nota"))
y = input("mensagem")
if (x >= 6):
	b = 10/100 * x
	c = b + x
	
else :
	
print
			 
			 
			
-- ERROR:
File "XXXX", line 9
    print
        ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 14:56:07) 
-- CODE:
x = float(input("nota"))
y = input("mensagem")
if (x >= 6):
	b = 10/100 * x
	c = b + x
	
else :
	

			 
			 
			
-- ERROR:
File "XXXX", line 13
    
       ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 14:56:16) 
-- CODE:
x = float(input("nota"))
y = input("mensagem")
if (x >= 6):
	b = 10/100 * x
	c = b + x
	

	

			 
			 
			
-- ERROR:
File "XXXX", line 13
    
       ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 15:02:09) 
-- CODE:
x = float(input("nota"))
y = input("mensagem")
if (y == "S") :
	x = (x + (10/100) * x)
else :
	x =x 
print (x)


	

	

			 
			 
			
-- OUTPUT:
5.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 15:02:24) 
-- CODE:
x = float(input("nota"))
y = input("mensagem")
if (y == "S") :
	x = (x + (10/100) * x)
else :
	x =x 
print (x)


	

	

			 
			 
			
-- OUTPUT:
5.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 15:06:23) 
-- CODE:
n = float(input("nota"))
b = input("bonificao")
if (b == "S") :
	nota = n + (10/100 * n)
else :
	nota = n
print(nota)
	
	


	

	

			 
			 
			
-- OUTPUT:
5.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-08 15:06:39) 
-- CODE:
n = float(input("nota"))
b = input("bonificao")
if (b == "S") :
	nota = n + (10/100 * n)
else :
	nota = n
print(nota)
	
	


	

	

			 
			 
			
-- EXECUTION TIME:
0.196693
-- TEST CASE 1:
---- input:
5.0
S
---- correct output:
5.5
---- user output:
5.5
-- TEST CASE 2:
---- input:
9.0
S
---- correct output:
9.9
---- user output:
9.9
-- TEST CASE 3:
---- input:
4.4
N
---- correct output:
4.4
---- user output:
4.4
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
